--- a/themes/elmcip/css/ie6.css
+++ b/themes/elmcip/css/ie6.css
@@ -79,5 +79,5 @@ ul.primary li.active a:focus .tab {
 .with-wireframes .region-sidebar-second .section,
 .with-wireframes .region-footer,
 .with-wireframes .region-bottom {
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
 }
